--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=aprendendo-Spring
+
+spring.datasource.url=jdbc:mysql://localhost:3306/db_usuario
+spring.datasource.username=root
+spring.datasource.password=wp131018
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Configurações do JPA/Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
